# AGM2D

./: CMakeLists.txt  compile.sh  main.cpp  run.sh
Header/: Greenfunction.cpp  Greenfunction.h  GreenfunctionAxisymmetric.cpp  GreenfunctionAxisymmetric.h  GreenfunctionAxisymmetricStokes.cpp  GreenfunctionAxisymmetricStokes.h  GreenfunctionReactionDiffusion.cpp  GreenfunctionReactionDiffusion.h  axialLine.cpp  axialLine.h  boundaryLine.cpp  boundaryLine.h  coordinate.cpp  coordinate.h  function.cpp  function.h  matrix.cpp  matrix.h  matrixMulti.cpp  matrixMulti.h  matrixNormal.cpp  matrixNormal.h  matrixPhi.cpp  matrixPhi.h  matrixRow.cpp  matrixRow.h  matrixStokesNormal.cpp  matrixStokesNormal.h  point.cpp  point.h  pointAxisymmetric.cpp  pointAxisymmetric.h  pointAxisymmetricStokes.cpp  pointAxisymmetricStokes.h  pointHeat.cpp  pointHeat.h  pointStokes.cpp  pointStokes.h  readFile.cpp  readFile.h  (+17 more)
